<resources>
    <string name="app_name">E-Passport</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Username</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="police">Police</string>
    <string name="user">User</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="select_user">Select User</string>
    <string name="name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Enter Password Again</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="notifications">notifications</string>
    <string name="menu_icon">menu icon</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="recyclerView">Recycler View</string>
    <string name="newForm">New Form</string>
    <string name="admin_login">Admin Login</string>
    <string name="adminEmail">adminEmail</string>
    <string name="adminPassword">Password</string>
    <string name="adminlogin">Login</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="manage_users">Manage Users</string>
    <string name="view_passport_applications">View Passport Applications</string>
    <string name="viewPassports">ViewPassports</string>
    <string name="logout">Logout</string>
    <string name="admin_id">Admin ID</string>
    <string name="status">Status</string>
    <string name="suspend">Suspend</string>
    <string name="Email">Email</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="application_id">Application ID</string>
    <string name="Status">Status</string>
    <string name="Name">Name:</string>
    <string name="Application_id">Application ID:</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="reason_for_rejection">Reason for rejection</string>
    <string name="search_users">Search Users</string>
</resources>