<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/logo" />

    <!-- Select User -->
    <TextView
        android:id="@+id/selectUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/select_user"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/UserBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="?attr/buttonBackground"
        android:text="@string/user" />

    <Button
        android:id="@+id/PoliceBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="?attr/buttonBackground"
        android:text="@string/police" />

    <Button
        android:id="@+id/AdminBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="?attr/buttonBackground"
        android:text="@string/admin" />

</LinearLayout>
